
  Changes:
    - Free for all multiplier is now configurable in startup tab.  It affects damage and HP.
    - Changed regular stone-wall from 50 resistances to 33 resistances.  Reinforced wall remain unchanged.
    - Removed "Disable Aerial Collision" setting as 2.0 will have aerial units, and it's incompatible with new path finder.
    - Fixed some UI incorrect descriptions.
    - Changed "[Time based attack] add point by %" setting max value to 75. (Please reset your setting to 75, if you were using 80 or 90.)
    - Added {6,7} minute options to "attack group forming interval".
    - Max Automatic Group's max value changed from 50 to 100.

  Bugfixes:
    - Fixed calculateMultipleLevel function did not call level up event.
    - Fixed a crash when player attacks the boss under certain conditions. [Issue: 45]
    - Fixed duplicated names in global.attack_group_attackable_entity_names.
    - Added test cases for automatic regression tests.

  Optimization:
    - Various Code Refactors
    - Cron processor changes

---------------------------------------------------------------------------------------------------
Version: 1.20.13
Date: 2024-03-01

  Changes:
    - Added a new "Map" setting to change army supply limit. [1x - 5x]
    - Default control army UI key changed from "Ctrl+A" to "Ctrl+Alt+A"

  Bugfixes:
    - Fixed army population does not decrease when they removed by AAI Vehicle's deadzone logic. [Issue #43]

---------------------------------------------------------------------------------------------------
Version: 1.20.12
Date: 2023-12-22

  Bugfixes:
    - Fixed a crash when dropships can't find a land position to drop. It will spawn a low tier flying unit instead.

---------------------------------------------------------------------------------------------------
Version: 1.20.11
Date: 2023-12-10

  Changes:
    - ERM Roach world map presets changes:
    - [Preset] Rename "ERM Roach World" to "ERM RTS World"